# jax-test-vmap-ffi

./: .gitignore  CMakeLists.txt  README.md  test_broadcast.py  test_vmap.py
src/vmap_cpp/: add.cpp
vmap_cpp/: add.cpp
